# wardrobe

./: .env  .gitignore  Dockerfile  pyproject.toml
wardrobe/: app.py  config.py  models.py
wardrobe-frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
wardrobe-frontend/src/: models.ts
wardrobe-frontend/src/components/: DeleteButton.vue  ItemCard.vue  ItemFilter.vue  UploadModal.vue
wardrobe-frontend/src/stores/: ItemStore.ts
wardrobe-frontend/src/views/: HomeView.vue  LoginView.vue
wardrobe/blueprints/: __init__.py  auth.py  items.py  tags.py
